#221 WIP.
git-svn-id: http://ebookdroid.googlecode.com/svn/trunk@1248 714301b5-5bf2-3aa6-4ccc-ecebab0412e3